<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#808080"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uas"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:padding="16dp"
        android:textSize="24sp"
        android:gravity="center" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_username"
        android:layout_marginTop="16dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_black_rounded"
        android:textColor="#FFFFFF" />

    <!-- TextView ini akan tampil setelah tombol diklik -->
    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_anda"
        android:layout_marginTop="24dp"
        android:textColor="#000000"
        android:gravity="center"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password_anda"
        android:textAlignment="center"
        android:textColor="#000000" />
</LinearLayout>
